Next release
============

  * New function bson_strcasecmp, a portable equivalent of strcasecmp.

Libbson-1.6.0
=============

It is my pleasure to announce libbson-1.6.0.

New features and bug fixes:

  * Use jsonsl instead of libyajl as our JSON parsing library, parse JSON more
    strictly, fix minor parsing bugs.
  * Extended JSON documents like '{"$code": "...", "$scope": {}}' are now parsed
    into BSON "code" elements.
  * ISO8601 dates now allow years from 0000 to 9999 inclusive. Before, years
    before 1970 were prohibited.
  * BSON floats and ints are now distinguished in JSON output.
  * The library is now built and continuously tested with MinGW-W64 on Windows.
  * The documentation is ported from Mallard XML to ReStructured Text, the
    HTML documentation is restyled, and numerous man page syntax errors fixed.
  * All public functions now have the __cdecl calling convention on Windows.

Thanks to everyone who contributed to the development of this release.

  * A. Jesse Jiryu Davis
  * Hannes Magnusson
  * Aleksander Melnikov
  * Remi Collet

Peace,

    A. Jesse Jiryu Davis


libbson-1.5.5
=============

No change since 1.5.4; released to keep pace with libmongoc's version.

-- A. Jesse Jiryu Davis


Libbson-1.5.4
=============

No change since 1.5.3; released to keep pace with libmongoc's version.

-- A. Jesse Jiryu Davis


Libbson-1.5.3
=============

No change since 1.5.2; released to keep pace with libmongoc's version.

-- A. Jesse Jiryu Davis


Libbson-1.5.2
=============

This is a patch release that fixes a build error with MinGW on Windows.


Libbson-1.5.1
=============

No change since 1.5.0; released to keep pace with libmongoc's version.

-- A. Jesse Jiryu Davis


Libbson-1.5.2
=============

It is my pleasure to announce Libbson-1.5.2.

New bug fixes:

  * CDRIVER-1982 fix ifdef for strerror_s with mingw.

Thanks to everyone who contributed to the development of this release.

  * A. Jesse Jiryu Davis

Peace,

    Hannes Magnusson

